# __pp-mp-2022

./: CMakeLists.txt  Makefile  readme.md
resources/instances/: abz7.txt  la01.txt  ta02.txt  ta03.txt
src/: imports.hpp  main.cpp  main.cu
src/domain/: candidate.hpp  candidate_writer.hpp  instance.hpp  orlib_reader.hpp  thread.hpp
src/domain/heuristics/: cuda_random_sample.cu  cuda_random_sample.h  hill_climber.hpp  random_sample.hpp
src/domain/operators/: binary.hpp  nullary.hpp  unary.hpp
src/utils/: color.hpp  common.hpp  console.cpp  console.hpp  random.hpp
